--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Views/MainWindow.axaml
@@ -214,7 +214,7 @@
                     Grid.Column="0"
                     Height="50"
 
-                    Source="{Binding IconPath}"
+                    Source="{Binding Icon}"
                     Stretch="Uniform" />
 
                   <TextBlock
